--- a/Java - Console/Java - Tic Tac Toe Multiplayer/nbproject/project.properties
+++ b/Java - Console/Java - Tic Tac Toe Multiplayer/nbproject/project.properties
@@ -24,7 +24,7 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Java_-_Tic_Tac_Toe.jar
+dist.jar=${dist.dir}/Java_-_Tic_Tac_Toe_Multiplayer.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 includes=**
