--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 /Java - Console/Java - Tic Tac Toe Multiplayer/build/
 /Java - Tic Tac Toe Vs AI/nbproject/private/
 /Java - Tic Tac Toe Vs AI/build/
+/Java - Console/Java - Tic Tac Toe Multiplayer/nbproject/private/
+/Java - Console/Java - Hangman/nbproject/private/
+/Java - Console/Java - Hangman/build/
