--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@
 /Java - Console/Java - Tic Tac Toe Multiplayer/nbproject/private/
 /Java - Console/Java - Hangman/nbproject/private/
 /Java - Console/Java - Hangman/build/
+/Java - Console/Java - Rock Paper Scissor/nbproject/private/
+/Java - Console/Java - Rock Paper Scissor/build/
+/Java - Console/Tester/nbproject/private/
+/Java - Console/Tester/build/
