--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@
 /Java - Console/Java - Rock Paper Scissor/build/
 /Java - Console/Tester/nbproject/private/
 /Java - Console/Tester/build/
+/Java - Console/Java - Guess Game/nbproject/private/
+/Java - Console/Java - Guess Game/build/
