--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@
 /Java - Console/Tester/build/
 /Java - Console/Java - Guess Game/nbproject/private/
 /Java - Console/Java - Guess Game/build/
+/Java - Console/Java - Escape Killer Game/nbproject/private/
+/Java - Console/Java - Escape Killer Game/build/
