--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@
 /Java - Console/Java - Guess Game/build/
 /Java - Console/Java - Escape Killer Game/nbproject/private/
 /Java - Console/Java - Escape Killer Game/build/
+/Java - Console/Java - Shapes/nbproject/private/
+/Java - Console/Java - Shapes/build/
